--- a/css/blocks/partners.css
+++ b/css/blocks/partners.css
@@ -27,6 +27,9 @@
     opacity: .5;
     padding: 44px 66px;
     margin: 0 auto;
+    transition: all .5s ease;
+    cursor: pointer;
+
 }
 .partners__block-button {
     flex-basis: 22%;
