--- a/css/blocks/contacts.css
+++ b/css/blocks/contacts.css
@@ -28,7 +28,11 @@
     width: 348px;
     border-radius: 100px;
     padding: 14px 25px;
+    transition: all .5s ease;
     border: 1px solid #333333;
+}
+.form-active {
+    background-color: #EAEAEA;
 }
 .form input::placeholder {
     color: #999999 ;
@@ -66,21 +70,23 @@
 }
 .contacts__sprite {
     display: flex;
+    height: 40px;
     margin-bottom: 20px;
 }
 
 .contacts__img-1 {
-    background: url(/img/social/Whatsapp-Icon.svg);
+    background: url(../../img/social/Whatsapp-Icon.svg);
     margin-right: 20px;
 }
 .contacts__img-2 {
-    background: url(/img/social/Telegram_2019_Logo.svg);
+    background: url(../../img/social/Telegram_2019_Logo.svg);
 }
 .contacts__img {
     width: 40px;
-    height: 40px;
+    height: 100%;
     background-size: cover;
     background-repeat: no-repeat;
+    transition: all .5s ease;
 }
  #map  {
 position: absolute;
