--- a/css/blocks/footer.css
+++ b/css/blocks/footer.css
@@ -14,19 +14,26 @@ footer {
     align-items: center;
 }
 .footer__social {
+    background-image: url(../../img/social/Соцсети.png);
     cursor: pointer;
     width: 45px;
     height: 45px;
     background-position: center;
-    background: url(/img/social/Соцсети.png) no-repeat;
+    
+    background-repeat: no-repeat;
     background-size: cover;    
+    transition: all .5s ease;
 }
+
 .footer__social:nth-child(2) {
     margin: 0 19px;
 }
+.footer__vk {
+    background-position: 0px 0px;
+}
 .footer__inst {
-    background-position: -64.5px 0px;
+    background-position: -63px 0px;
 }
 .footer__fc{
-    background-position: -129.5px 0px;
+    background-position: -126px 0px; 
 }
