--- a/css/blocks/gallery.css
+++ b/css/blocks/gallery.css
@@ -1,6 +1,6 @@
 /* _______Трейтий блок__________ */
 .gallery {
-    background: url(/img/gallery/birmingham-museums-trust-MK_98NuC4-4-unsplash\ 3.jpg) no-repeat;
+    background: url(../../img/gallery/birmingham-museums-trust-MK_98NuC4-4-unsplash\ 3.jpg) no-repeat;
     background-size: cover;  
     height: 100%;
 }
@@ -65,8 +65,17 @@ margin-bottom: -5px;
 width: 100%;
    
 }
+.swiper__img-block {
+    cursor: pointer;
+    position: relative;
+    transition: all 1s ease;
+}
+.swiper__img-block  img {
+    width: 100%;
+    height: 100%;
 
-.gallery__right img::before {
+}
+.swiper__img-block::before {
     content: "";
     display: none;
     position: absolute;
@@ -76,18 +85,23 @@ width: 100%;
     left: 5%;
     bottom: 5%;
    background-color: black;
+
    }
-   .gallery__right img::after {
+   .swiper__img-block::after {
        content: "";
        display: none;
        position: absolute;
        width: 81px;
        height: 80px;
-       background: url(/img/icon/Group\ 10.png) no-repeat;
+       background: url(../../img/icon/Group\ 10.png) no-repeat;
        top: 40%;
        right: 40%;
-   }
 
+   }
+   .swiper__img-block img:hover{
+   
+
+   }
 .content-1:nth-child(3n) {
     margin-bottom: 50px;
 }
