--- a/css/blocks/header.css
+++ b/css/blocks/header.css
@@ -82,6 +82,11 @@ left:0 !important;
 .header__akk {
     z-index: 1;
     margin-right: 2px;
+    transition: all .5s ease;
+
+}
+.header__akk * {
+    transition: all .5s ease;
 }
 .svg path {
     fill:inherit;
@@ -101,6 +106,7 @@ margin-right: 13px;
     border: none;
     font-size: 16px; 
     position: relative;
+    transition: all .5s ease;
     
 }
 
@@ -131,6 +137,7 @@ margin-right: 13px;
     width: 7px;
     height: 1px;
     right: -15px;
+    top: 14px;
     margin-left: 8px;
   background-color: white;
 }
@@ -142,17 +149,21 @@ margin-right: 13px;
     transform: rotate(135deg);
     right: -19px;
 }
-
+.header__search-full * {
+    transition: all .15s ease;
+}
 .header__search-full {
     display: flex;
     align-items: center;
 }
+
 .header__button {
     width: 23px ;
     height: 21px;    
     border: none;
     background-color: transparent;  
     margin-right: 9px;
+  
 }
 
 .header__search {
@@ -163,6 +174,7 @@ margin-right: 13px;
    background-color:  transparent;
    color:rgba(255, 255, 255, 0.85) ;
    font-size: 18px;  
+   transition: all .5s ease;
 }
 input::-webkit-search-decoration,
 input::-webkit-search-cancel-button,
@@ -176,33 +188,36 @@ input::-webkit-search-results-decoration { display: none; }
 }
 .header__content {
     padding: 40px;
-    display: none;
+  display: none;
     position: absolute;  
-    width: 220px;
-    height: 300px;
+    width: 200px;
+    height: 220px;
     color: white;
-    top: 45px;
+    top: 60px;
+    left: -75px;
     z-index: 15;
     font-size: 14px;
     background-color:  rgb(153,153,153);
+  
+    
 }
 .header__content--active {
-    display:block;
+display: block;
 }
 .header__select {
+
    margin-bottom: 20px;
     padding: 10px;
-  
-    background-image: url(/img/start-block/birmingham-museums-trust-MK_98NuC4-4-unsplash\ 1.png);
+  height: 20px;
+    background-image: url(../../img/start-block/birmingham-museums-trust-MK_98NuC4-4-unsplash\ 1.png);
     background-size:cover;
-    border: 2px solid black;
 }
 .simplebar-scrollbar {
     background-color: #9D5CD0 ;
 }
 .simplebar-track.simplebar-vertical {
-   top: 28px;
-    height: 87%;
+   top: 40px; 
+   bottom: 15px;
     width: 2px;
     margin-right: 18px;
     background-color: #000000; ;
