--- a/css/effects/hover-effects.css
+++ b/css/effects/hover-effects.css
@@ -2,7 +2,7 @@
 
 .header__akk:hover * {
 color:  #C283F3;
-transition-duration: .5s;
+
 fill: #C283F3 ;
 
 }
@@ -12,7 +12,6 @@ fill: #C283F3 ;
 }
 .header__link:hover {
     color:  #C283F3;
-    transition-duration: .5s;
 }
 .link-bottom:hover::before,
 .link-bottom:hover::after{
@@ -24,22 +23,19 @@ fill: #C283F3 ;
    background-color:  #C283F3 ;
 }
 
-
-
 .header__search-full:hover *  {
     border-bottom-color:#C283F3 ;
+   
     fill: #C283F3 ;
-    transition-duration: .5s;
 }
 .start__button:hover {
-    border: 2px solid #D1A9F0;
-    transition-duration: .5s;
+    border: 3px solid #D1A9F0;
 }
 .history__img:hover {
     box-shadow: 0 0 10px rgba(157, 92, 208, 0.7);
-    transition-duration: .3s;
 }
 .history__link:hover {
+    color: #D1A9F0;
     border-bottom: 1px solid #D1A9F0;
 }
 .history__button:hover{ 
@@ -52,6 +48,13 @@ fill: #C283F3 ;
 .history__period label:hover{
     color: #9D5CD0 ;
 }
+.btn,
+.form__button,
+.editions__button,
+.events__button,
+.partners__btn {
+    transition: all 1s ease;
+}
 .btn:hover,
 .form__button:hover,
 .editions__button:hover,
@@ -59,31 +62,41 @@ fill: #C283F3 ;
 .partners__btn:hover {
     background: #9D5CD0;
     color: #FFFFFF ;
-    transition-duration: .2s;
 }
+
 .btn:hover::before,
 .btn:hover::after  {
    background-color: #FFFFFF;
-   transition-duration: .2s;
+
 }
-.gallery__img:hover::before,
-.gallery__img:hover::after {
-    content: '';
+.swiper__img-block:hover::before,
+.swiper__img-block:hover::after {
     display: block;
-    transition-duration: .13s;
+
 }
-.partners__img:hover {
+.partners__border img:hover {
     opacity: 10;
     filter: none;
-    transition-duration: .3s;
+   
+}
+.detailed__icon svg:hover {
+    fill:#D1A9F0;
+}
+.detailed__descr a:hover {
+text-decoration: revert ;
 }
 .editions__category:hover {
     color:#C283F3;
-    transition-duration: .3s;
+}
+.contacts__img:hover {
+    opacity: 0.5;
 }
 .footer__social:hover {
-    filter:sepia(50%);
-    transition-duration: .3s;
-    
+    filter: sepia(0) hue-rotate(270deg) brightness(60%) saturate(1000%)
   
+  
+}
+.footer__social:active {
+    filter: sepia(1) hue-rotate(240deg) brightness(45%) saturate(1000%);
+   
 }
