--- a/css/adaptive/1024-1920.css
+++ b/css/adaptive/1024-1920.css
@@ -3,10 +3,13 @@
         max-width: 1400px;
     }
     .header__akk, .header__link {
-        font-size: 18px;
+        font-size: 16px;
     }
     .header__menu {
         margin: 0px auto 0 16px;
+    }
+    .events-slide {
+        width: 445px !important;
     }
 }
 
@@ -14,20 +17,39 @@
     .fix-container {
     max-width: 1200px;
     }
-    .header__item {
-        padding-right: 42px;
+    .item-bottom {
+        margin-right: 80px;
+    }
+    .events-slide {
+        width: 383px !important;
     }
 }
 @media(max-width: 1200px) { 
     .fix-container {
     max-width: 980px;
     }
-    .header__item {
-        padding-right: 25px;
-    }
+  
     .header__akk, .header__link {
-        font-size: 17px;
+        font-size: 15px;
         
     }
-    
+    .item-top {
+        margin-right: 35px;
+    }
+    .item-bottom {
+        margin-right: 55px;
+    }
+    .header__search  {
+        width: 200px;
+    }
+    .detailed__descr {
+        width: 80%;
+    }
+    .history__content {
+        width: 100%;
+        height: 400px;
+    }
+    .events-slide {
+        width: 470px !important;
+    }
 }
