--- a/css/adaptive/1024.css
+++ b/css/adaptive/1024.css
@@ -2,24 +2,22 @@
 @media ( max-width: 1024px ) {
    
     .fix-container {
-        max-width: 932px;
+        max-width: 925px;
         width: 100%;
     }
     header {
         display: flex;   
-         flex-direction: row;
+        flex-direction: row;
     }
     .header__top {
         display: flex;  
         width: 100%;
-      
     }
     .header__bottom {
         width: auto;
-      right: 20px;    
-      background-color: black; 
+        right: 20px;    
+        background-color: black; 
     }
-
     .unity-bottom {
         padding: 21px 29px;
         justify-content:flex-end;
@@ -27,7 +25,6 @@
     .header__button {
         width: 30px;
         height: 30px;
-       
     }
     .header__akk,
     .unity-bottom .header__list,
@@ -41,7 +38,7 @@
         width: 23%;
     }
     .header__menu {
-    position: fixed;
+        position: fixed;
         text-align: center;
         width: 100%;
         height: 100%;
@@ -51,13 +48,12 @@
         bottom: -100px;
         border-top: 1px solid #CACACA;
         background-color: rgba(0, 0, 0, 0.726);
-        transition: all 0.3s ease 0s;
-       
+        transition: all 0.3s ease 0s; 
     }
     .header__item {
-    border-bottom: 2px solid #CACACA;
-    width: 90%;
-    margin: 0 auto;
+        border-bottom: 2px solid #CACACA;
+        width: 90%;
+        margin: 0 auto;
     }
     body.lock {
         overflow-y: hidden;
@@ -82,7 +78,6 @@
         width: 60%;
         transition: all 0.9s ease 0s;
         background-color: black;
-    
     }
     .header__burger {
         display: block;
@@ -98,28 +93,29 @@
     }
 
  /* Первый блок */
- .start__container {
-     height: 770px;
- }
- .start__info {
-    margin: 217px 0 0 ;
-    width: 100%;
- }
- .start__button  {
-     margin-bottom: 116px;
- }
- .start__title {
-    font-size: 70px;
-    line-height: 1.14;
-    margin-bottom: 12px;
-    letter-spacing: 2px;
-}
- .start__descr {
-     width: 72%;
- }
- 
+
+    .start__container {
+         height: 770px;
+     }
+    .start__info {
+        margin: 217px 0 0 ;
+        width: 100%;
+     }
+    .start__button  {
+        margin-bottom: 116px;
+     }
+    .start__title {
+        font-size: 70px;
+        line-height: 1.14;
+        margin-bottom: 12px;
+        letter-spacing: 2px;
+    }
+     .start__descr {
+        width: 72%;
+     }
  
  /* Второй блок */ 
+
     .project__info {
         width: 100%;
     }
@@ -128,45 +124,53 @@
         margin-bottom: 71px;
     }
     /* Третий блок */  
-  .gallery img {
-      width: 280px;
-  }
-  .gallery__unity-block {
-    padding-bottom:  72px;
-  }
+    .gallery img {
+        width: 280px;
+    }
+    .gallery__unity-block {
+        padding-bottom:  72px;
+    }
     .gallery__left {
         width: 435px;
         z-index: 1;
         margin-right: 55px;
     }
-
+    .gallery__title{
+        margin-bottom: 23px;
+    }
     .gallery__descr {
         width: 100%;
-        font-size: 16.5px;
+        font-size: 16px;
+        line-height: 1.98;
     }
-    
     .history__countries {
-        margin-top: 82px;
+        margin-left: 34px;
+        margin-top: 17px;
     }
     .history__celebrity {
         margin-top: 31px;
-    } 
+    }
     .history__ame {
         font-size: 23.2px;
     }
-    
     .descr-1 {
         width: 100%;
         font-size: 16px;
-        margin-bottom: 41px;
+        margin-bottom: 36px;
     }
     .history__left {
-        width: 440px;
+        flex-basis: 48%;
+        margin-right: 54px;
     }
     .history__right {
         width:  440px;
     }
-    
+    .history__name {
+        margin-bottom: 12px;
+    }
+    .history__period:first-child {
+        padding-bottom: 0px;
+    }
     .history__celebrity .history__descr {
         margin-top: 10px;
         line-height: 2;
@@ -175,8 +179,7 @@
         height: 273px;
         width: 438px;
         background-position: center;
-        background-size: 440px;
-       
+        background-size: 440px;    
     }
     .header__logo {
         display: flex;
@@ -184,8 +187,7 @@
     }
     .history__content {
         height:389px;
-       width: 100%;
-      
+        width: 100%;
     }
     .history__item {
         width: 57%;
@@ -195,13 +197,12 @@
         font-size: 23px;
     }
     /*  */
-    .title {
-        margin-bottom: 15px;
+    .events__container {
+        margin-top: 21px;
     }
-  
     .events__info {
         height: 480px;
-        padding: 0 34px;
+        padding: 0 39px;
     }
     .events__adrees {
         margin: 12px 16px 6px;
@@ -209,13 +210,10 @@
     .events-slide {
         width: 297px !important;
     }
-    .events__title {
-     margin-bottom: 9px;
-        
-    }
     .events__info h2 {
         font-size: 23px;
         margin-bottom: 0px;
+        line-height: 1.4;
     }
     .events__descr {
         font-size: 15px;
@@ -231,7 +229,7 @@
     .events__button {
         margin: 34px auto 80px;
         padding: 17px 32px;
-        font-size: 20px;
+        font-size: 18px;
     }
     .events__block {
         height: 682px;
@@ -245,14 +243,15 @@
     .dots {
         display: block;
     }
+
     /*  */
+
     .editions {
         overflow: hidden;
         position: relative;
     }
     .editions__title {
         font-size: 47px;
-        margin-bottom: 20px;
     }
     .editions img {
         width: 289px;
@@ -260,12 +259,11 @@
     }
     .editions__filter, 
     .editions__all-category {
-       margin-right: 13px;
+        margin-right: 13px;
     }
     .editions__all-category {
         line-height: 2;
         margin-bottom: 33px;
-
     }
     .editions__category {
         font-size: 16px;
@@ -273,23 +271,17 @@
     .partners__border img {
         padding: 37px 23px;
     }
-    .editions__info {
-        margin: 10px 0 8px;
-    }
-    .editions__cost-price {
-        width: 68px;
+    .editions__info {  
+        margin: 13px 0 12px;
     }
     .editions__rub {
-        padding: 0 22px 0 13px;
+        padding: 0 18px 0 9px;
     }
     .editions__cost {
-        margin: 0;
-        
-    }
-    
+        margin: 0;      
+    } 
     .editions__price h3 {
-      margin-bottom: 14px;
-       
+        margin-bottom: 14px;      
     }
     .editions__books .slide-list {
         margin: 40px 0px 30px;
@@ -297,16 +289,17 @@
     .editions__size-swiper {
         left: 0;
     }
+
     /*  */
+
     .detailed__descr {
         width: 100%; 
     }
-    /*  */
 
+    /*  */
+    
     .partners__title {
         font-size: 24px;       
-        padding: 19px 0 8px;
-
     }
     .partners__size {
         width: 88%;
@@ -318,23 +311,18 @@
         height: 127px;
         width: 383px;
     }
-
-    .btn__partners-right {
-        
+    .btn__partners-right {       
         left: -78%;
     }
     .contacts__img {
         width: 59px;
         height: 59px;
-        margin-left: 5px;
-        margin-right: 25px;
-    }
-    .contacts__title {
-        padding-top: 79px;
-
+        margin-left: 0px;
+        margin-right: 29px;
     }
     .contacts__info {
-        padding: 125px 0 82px;
+        padding: 132px 43px 82px 0px;
+        width: 440px;
     }
     .contacts__communication {
         margin: 40px 0 18px; 
@@ -343,49 +331,47 @@
         font-size: 23px;
     }
     .contacts__street {
-        margin-bottom: 29px;
+        margin-bottom: 38px;
     }
     .form__title {
         margin-bottom: 16px;
     }
     
     .form input {
-        width: 337px;
-        padding: 12px 0;
+        width: 285px;
+        padding: 12px  25px;
     }
     .form__name, .form__tel {
         margin-bottom: 21px;
     }
-  
     .form__button {
         margin-top:0 ;
       font-size: 20px;
-        width: 159px;
+        width: 154px;
     }
     #map {
         width: 52.6% !important;
     }
     .footer__social:nth-child(2) {
-        margin: 0 24px;
-    }
-    
+        margin: 0 22px;
+    } 
     .footer__all {
         padding: 44px 0;
     }
     .footer__logo img  {
- width: 25%;
+        width: 25%;
     }
     .footer__social {
         width: 65px;
-        height: 57px;
-    
-    }
-    
+        height: 57px;    
+    }   
     .footer__inst {
         background-position: -77.5px ;
     }
     .footer__fc {
         background-position: -155.5px ;
+    }   
+    .contacts {
+        margin-bottom: 10px !important;
     }
-    
 }
