--- a/css/adaptive/320.css
+++ b/css/adaptive/320.css
@@ -4,6 +4,9 @@
         max-width: 292px;
         margin: 0 15px;
     }
+    .header__logo {
+        margin-left: 28px;
+    }
     .unity-top {
         display: flex;
         justify-content: space-between;
@@ -56,14 +59,17 @@
     .header__button {
         width: 17px;
         height: 16px;
-        margin-right: 15px; 
+        margin-right: 23px;
     }
     .start__container {
         height: 355px;
     }
     .start__info {
-        margin: 80px 0 37px;
+        margin: 80px 0 43px;
     } 
+    section:not(:first-child) {
+        margin: 0px 0;
+    }
     .start__title {
         font-size: 32px;
         margin-bottom: 11px;
@@ -71,7 +77,7 @@
     }
     .start__descr {
         font-size: 11px;
-        line-height: 1.4;
+        line-height: 1.5;
         margin: 0 auto;
         width: 90%;
     }
@@ -86,18 +92,18 @@
 
     .title {
         font-size: 28px;
-        padding-top: 50px;
-        margin-bottom: 11px;
+        padding-top: 34px;
+        margin-bottom: 15px;
     }
     .gallery__title {
-        margin-bottom: 16px;
+        margin-bottom: 20px;
     }
     .gallery__filter {
         margin-bottom: 10px;
     }
     .project__descr {
         font-size: 14px;
-        margin-bottom: 42px;
+        margin-bottom: 41px;
         word-spacing: .8px;
     }
     .gallery__unity-block {
@@ -105,13 +111,17 @@
         height: 962px;
     }
     .gallery__descr {
-        line-height: 1.95;
+        line-height: 1.9;
+        width: 90%;
     }
     .gallery__sort {
         width: 99%;
     }
     .gallery__left {
-        height: 891px;
+        height: 887px;
+    }
+    .events, .history {
+        margin: 0px  !important;
     }
     .gallery__right .swiper-wrapper {
         height: 78%;
@@ -155,8 +165,9 @@
        justify-content: space-between;
     }
     .history__title {
-        padding-top: 82px;
-        margin-bottom: 7px;
+        padding-top: 82px;    
+        margin-bottom: 14px;
+
        
     }
     .history__button::before, .history__button::after {
@@ -166,7 +177,7 @@
         font-size: 16px;
     }
     .editions__filter {
-        margin-bottom: 51px;
+        margin-bottom: 45px;
     }
     .history__img {
         width: 32px;
@@ -181,19 +192,21 @@
         padding-bottom: 2px;
     }
     .history__period {
-        padding: 17px 0 23px;
+        padding: 21px 0 25px;
     }
     .slide__active {
-        margin: 22px 0px 0px;
+        margin: 27px 0px 0px;
     padding: 0px;
     }
     .history__period label {
         font-size: 18.1px;
         padding: 23px 0;
+      
     }
     .history__button {
         width: 30px;
         height: 30px;
+        top: 20px;
     }
     .history__content {
         height: auto;
@@ -210,24 +223,24 @@
         margin-top: 20px;
     }
     .history__name {
-        margin-bottom: 10px;
+        margin-bottom: 15px;
     }
     .history__celebrity .history__descr {
         margin-top: 4px; 
         word-spacing: 1px;
     }
-    .events {
-        height: 847px;
-    }
-
     .events__button {
         display: none;
     }
     .events__img {
         max-width: 118%;
     }
-    .events__title {  
-        padding-top: 35px;
+    .events__title {
+        padding-top: 15px;
+    }
+    .events__container {
+        margin-top: 14px;
+        margin-bottom: 35px;
     }
     .events__link {
         left: 28px;
@@ -238,15 +251,17 @@
         padding: 0 24px;
     }
     .events__descr {
-        padding-top: 36px;
+        padding-top: 40px;
         word-spacing: 7px;
     }
     .editions__title {
         font-size: 27px;
-        padding-top: 50px;
+        padding-top: 54px;
         margin-bottom: 20px;
     }
-   
+    .editions__filter h2 {
+        margin-top: 5px;
+    }
    .editions__img {
        display: flex;
        
@@ -266,7 +281,7 @@
     
     }
     .price-1 {
-        margin-top: 67px;
+        margin-top: 71px;
     }
     .editions__cost-price {
         padding: 12px 0;
@@ -285,7 +300,7 @@
         font-size: 16px;
     }
     .partners__title {
-        padding-top: 16px;
+        padding-top: 5px;
         font-size: 18px;
         margin-bottom: 0px;
         padding-bottom: 15px;
@@ -307,49 +322,67 @@
     .partners__btn {
         position: relative;
     }
-    .contacts { 
-        height: 847px;
-    }
     .detailed__icon {
         left: -1px;
         top: 1px;
     }
     .contacts__title {
-        padding-top: 51x;
-        margin-bottom: 12px;
+        padding-top: 0px;
+        margin-bottom: 11px;
     }
     .contacts__info {
         width: 100%;
         border: none;
+        margin: 0 13px;
+    }
+    .detailed {
+        margin-bottom: 57px !important;
     }
     .form__title {
         margin-bottom: 21px;
     }
     .form__title , .contacts__office {
-        font-size: 18px;      
+        font-size: 18px; 
+        margin-bottom:6px;  
+        margin-top: 6px;  
+    }
+    .form__title {
+        margin-bottom: 23px;
+    }
+    .form__name {
+        margin-bottom: 15px;
     }
     .btn__partners-right {
         left: 17px;
     }
     .contacts__street {
         margin-top: 0px;
-        margin-bottom: 361px;
+        margin-bottom: 356px;
         font-size: 13px;
     }
     .contacts__img {
         width: 49px;
         height: 49px;
-      margin-left: 0;
-      margin-right: 21px;
+        margin-left: 2px;
+        margin-right: 20px;
     }
     #map {
-        top: 161px;       
+        top: 67px;    
+        position: absolute;
+        width: 100% !important;
+        z-index: 5;
+        height: 310px ;
+        right: 0;
+        left: 0;
     }
     .form input {
-        width: 290px;
-        padding: 11px 0;
+        width: 240px;
+        padding: 10px 25px;
     }
-    .form__name, .form__tel {
+    .form__name {
+        margin-bottom: 19px;
+    }
+   .form__tel {
         margin-bottom: 21px;
     }
     .form__button {
@@ -358,10 +391,12 @@
         height: 39px;
         padding: 10px 40px;
     }
-    
+    .contacts {
+        margin-bottom: 20px !important;
+    }
     .contacts__communication {
         font-size: 18px;
-        margin: 25px 0 11px;
+        margin: 25px 0 15px;
     }
     .footer__all  {
         flex-direction: column-reverse;
