--- a/css/blocks/events.css
+++ b/css/blocks/events.css
@@ -1,12 +1,11 @@
 /*_____Пятый блок_________*/
 
-.events__title {
-    margin-bottom: 11px;
-}
+
 .events__container{
     display: flex;
     height: 700px;
     transition: height 1s;
+    margin-top: 26px;
 }
 .active-event {
     height: auto;
@@ -28,6 +27,7 @@
 .events__info h2 {
     font-size: 23px;
     margin-bottom: 0;
+    line-height: 1.3;
 }
 .events__img { 
     height:300px;
@@ -42,7 +42,7 @@
 .events__adrees {
     font-size: 12px;
     text-align: end;
-   margin: 14px 20px 0px;
+   margin: 13px 20px ;
     color: #999999;
 }
 .events__all {
@@ -61,9 +61,8 @@
 .events__link  {
     position: absolute;
     background-color: transparent;
-    font-size: 16px;
-    bottom: 45px;
-    left: 52px;
+    font-size: 15px;
+    bottom: 48px;
    color: #9D5CD0;
    border: none;
    border-bottom: 1px solid #9D5CD0;
@@ -73,11 +72,11 @@
     display: flex;  
     justify-content: center;
     align-items: center;
-    width: 160px;
+    width: 186px;
     height: 59px;
     color: #9D5CD0 ;
     font-weight: 600;
-    margin: 50px auto  80px;
+    margin: 50px auto  78px;
 }
 .more {
     display: none;
