--- a/css/blocks/editions.css
+++ b/css/blocks/editions.css
@@ -1,6 +1,6 @@
 /*_____Шестой блок________*/    
 .editions {
-    background: url(../../img/birmingham-museums-trust-MK_98NuC4-4-unsplash\ 4.webp) no-repeat; 
+    background: url(../../img/birmingham-museums-trust-MK_98NuC4-4-unsplash4.webp) no-repeat; 
     background-size: cover;
 }
 .editions__title {
