--- a/css/blocks/gallery.css
+++ b/css/blocks/gallery.css
@@ -1,161 +1,154 @@
 /* _______Трейтий блок__________ */
 .gallery {
-    background: url(../../img/gallery/birmingham-museums-trust-MK_98NuC4-4-unsplash\ 3.webp) no-repeat ;
-    background-size: cover;
+  background: url(../../img/gallery/birmingham-museums-trust-MK_98NuC4-4-unsplash3.webp)
+    no-repeat;
+  background-size: cover;
 }
 .gallery__title {
-    color: #FFFFFF ;
-    padding-top: 0;
-    margin-bottom: 26px;
+  color: #ffffff;
+  padding-top: 0;
+  margin-bottom: 26px;
 }
-.gallery__unity-block { 
-   display: flex;
-   padding: 55px 0 72px;
-    position: relative;
-    height: 996px;
+.gallery__unity-block {
+  display: flex;
+  padding: 55px 0 72px;
+  position: relative;
+  height: 996px;
 }
-  
+
 .gallery__filter-full {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    justify-content: space-between;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-between;
 }
 .gallery__left {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 35%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 35%;
   margin-right: 48px;
 }
 .gallery__sort {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 .gallery__filter {
-    color: #FFFFFF;
-    font-size: 17px;
-    margin-bottom: 15px;
+  color: #ffffff;
+  font-size: 17px;
+  margin-bottom: 15px;
 }
 .gallery__author,
 .gallery__left input {
-    background-color: transparent;
-    padding: 10px 0 ;
-    border-radius: 6px;
-    border: 1px solid #999999;
-    
+  background-color: transparent;
+  padding: 10px 0;
+  border-radius: 6px;
+  border: 1px solid #999999;
 }
 
 .gallery__author,
 .gallery__left input::placeholder {
-    color: #999999;
+  color: #999999;
 }
 .gallery__descr {
-    color: #FFFFFF;
-    line-height: 2;
-margin-bottom: 0px;
-    width: 90%;
-    word-spacing: 3px;
+  color: #ffffff;
+  line-height: 2;
+  margin-bottom: 0px;
+  width: 90%;
+  word-spacing: 3px;
 }
 .gallery__right {
   height: 100%;
-width: 100%;
-   
+  width: 100%;
 }
 .swiper__img-block {
-    cursor: pointer;
-    position: relative;
+  cursor: pointer;
+  position: relative;
 }
 
-.swiper__img-block  img {
-    width: 100%;
-    height: 100%;
-
+.swiper__img-block img {
+  width: 100%;
+  height: 100%;
 }
 .swiper__img-block::before {
-    content: "";
-    display: none;
-    position: absolute;
-    width: 90%;
-    height: 90%;
-    opacity: .5;
-    left: 5%;
-    bottom: 5%;
-   background-color: black;
-
-   }
-   .swiper__img-block::after {
-       content: "";
-       display: none;
-       position: absolute;
-       width: 81px;
-       height: 80px;
-       background: url(../../img/icon/Group\ 10.png) no-repeat;
-       top: 40%;
-       right: 40%;
-
-   }
+  content: "";
+  display: none;
+  position: absolute;
+  width: 90%;
+  height: 90%;
+  opacity: 0.5;
+  left: 5%;
+  bottom: 5%;
+  background-color: black;
+}
+.swiper__img-block::after {
+  content: "";
+  display: none;
+  position: absolute;
+  width: 81px;
+  height: 80px;
+  background: url(../../img/icon/Group10.png) no-repeat;
+  top: 40%;
+  right: 40%;
+}
 
 .content-1:nth-child(3n) {
-    margin-bottom: 50px;
+  margin-bottom: 50px;
 }
 
+/* селект  */
 
-    /* селект  */ 
-
-
-    .choices {
-        overflow: visible;
-    }
-.choices[data-type*='select-one'] .choices__inner {
-    background-color: transparent;
-    color: white;
-    padding: 0;
-    border-radius: 5px;
+.choices {
+  overflow: visible;
+}
+.choices[data-type*="select-one"] .choices__inner {
+  background-color: transparent;
+  color: white;
+  padding: 0;
+  border-radius: 5px;
 }
 .choices__inner {
-    min-height: 40px;
-    border: 1px solid #FFFFFF;
-    transition: background-color .3s ease;
+  min-height: 40px;
+  border: 1px solid #ffffff;
+  transition: background-color 0.3s ease;
 }
 .choices__list--dropdown .choices__item:hover,
-.choices[data-type*='select-one'] .choices__inner:hover {
-    background-color: rgba(255, 255, 255, 0.2);
+.choices[data-type*="select-one"] .choices__inner:hover {
+  background-color: rgba(255, 255, 255, 0.2);
 }
 
-.choices[data-type*=select-one]:after {
-    width: 15px;
-    height: 15px;
-    top: 25%;
-    border: none;
-    margin: 0;
-    background: url(/img/icon/Rectangle\ 74.png) no-repeat center;
-    border-color: rgb(255, 252, 252) transparent transparent;
+.choices[data-type*="select-one"]:after {
+  width: 15px;
+  height: 15px;
+  top: 25%;
+  border: none;
+  margin: 0;
+  background: url(/img/icon/Rectangle74.png) no-repeat center;
+  border-color: rgb(255, 252, 252) transparent transparent;
 }
-.choices[data-type*=select-one].is-open:after {
-margin: 0;
-transform: rotate(180deg);
+.choices[data-type*="select-one"].is-open:after {
+  margin: 0;
+  transform: rotate(180deg);
 }
 .choices__list--single,
 .choices__list--single .choices__item {
-    position: absolute;
-    bottom: 0;
-    top: 0;
-    padding: 0;
-    margin-left: 8px;
-    display: flex;
-    align-items: center;
-    font-size: 19px;
+  position: absolute;
+  bottom: 0;
+  top: 0;
+  padding: 0;
+  margin-left: 8px;
+  display: flex;
+  align-items: center;
+  font-size: 19px;
 }
 .choices__list--dropdown {
-    background-color: transparent;
-    color: white;
-    border-radius: 6px;
-    border: 1px solid  #999999;
-   
+  background-color: transparent;
+  color: white;
+  border-radius: 6px;
+  border: 1px solid #999999;
 }
 .choices__list--dropdown .choices__item:not(:last-child) {
-    border-bottom: 1px solid #999999;
-    cursor: pointer;
-    transition:background-color .5s ease;
+  border-bottom: 1px solid #999999;
+  cursor: pointer;
+  transition: background-color 0.5s ease;
 }
